fix border-image issue on firefox 15

--- a/php/elogra/public/css/bootstrap/extra.css
+++ b/php/elogra/public/css/bootstrap/extra.css
@@ -165,7 +165,8 @@ border-width: 22px 27px 27px;
 -webkit-border-image: url('/img/hakawy-border.png') 22 27 27 stretch; 
 -o-border-image: url('/img/hakawy-border.png') 22 27 27 stretch; 
 border-image: url('/img/hakawy-border.png') 22 27 27 fill stretch; 
-    padding: 2px;
+border-image-width: 27px 27px 27px 27px;
+    padding: 10px;
 }
 
 .hekaya-border{
